fix ms.tex and docs

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 		<script defer src="script.js"></script>
 	</head>
 	<body>
-		<div style="width:70%;float:left;">
+		<div style="width:50%;float:left;">
 			Lung and COVID-19 CT segmentation
 		</div>
-		<div style="width:15%;float:left;">
+		<div style="width:25%;float:left;text-align:right;">
 			<a href="https://github.com/pbizopoulos/comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct">Source code</a>
 		</div>
-		<div style="width:15%;float:left;">
+		<div style="width:25%;float:left;text-align:right;">
 			<a href="https://pbizopoulos.github.io">Home page</a>
 		</div>
 		<hr style="width:100%;">
