--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<input accept="image/*" id="inputFile" type="file">
 				</div>
 				<div>
-					<select id="modelSelect" onchange="loadModel(predictView);" style="width:100%">
+					<select id="modelSelect" onchange="loadModel(predictView);">
 						<option value="python/release/lesion-segmentation-a.FPN.mobilenet_v2.imagenet/model.json">lesion-segmentation-a.FPN.mobilenet_v2.imagenet</option>
 						<option value="python/release/lung-segmentation.FPN.mobilenet_v2.imagenet/model.json">lung-segmentation.FPN.mobilenet_v2.imagenet</option>
 					</select>
@@ -34,8 +34,8 @@
 				<div id="modelDownloadFractionDiv">0%</div>
 			</div>
 			<div class="block">
-				<canvas height="256" id="imageInputCanvas" style="position:absolute;" width="256"></canvas>
-				<canvas height="256" id="maskOutputCanvas" style="position:absolute;opacity:0.5;" width="256"></canvas>
+				<canvas height="256" id="imageInputCanvas" width="256"></canvas>
+				<canvas height="256" id="maskOutputCanvas" width="256"></canvas>
 			</div>
 		</div>
 	</body>
