--- a/Makefile.html
+++ b/Makefile.html
@@ -1,13 +1,13 @@
 .POSIX:
 
-.PHONY: all clean help
+.PHONY: all check clean help
 
-container_engine=docker # For podman first execute `printf 'unqualified-search-registries=["docker.io"]\n' > /etc/containers/registries.conf.d/docker.conf`
-debug_args=$$(test -t 0 && printf '%s' '--interactive --tty')
-user_arg=$$(test $(container_engine) = 'docker' && printf '%s' "--user $$(id -u):$$(id -g)")
-work_dir=/work
+container_engine = docker # For podman first execute `printf 'unqualified-search-registries=["docker.io"]\n' > /etc/containers/registries.conf.d/docker.conf`
+debug_args = $$(test -t 0 && printf '%s' '--interactive --tty')
+user_arg = $$(test $(container_engine) = 'docker' && printf '%s' "--user $$(id -u):$$(id -g)")
+work_dir = /work
 
-all: .dockerignore .gitignore bin/cert.pem ## Run server.
+all: .dockerignore .gitignore bin/cert.pem
 	$(container_engine) container run \
 		$(debug_args) \
 		$(user_arg) \
@@ -18,15 +18,18 @@ all: .dockerignore .gitignore bin/cert.pem ## Run server.
 		--rm \
 		--volume $$(pwd):$(work_dir)/ \
 		--workdir $(work_dir)/ \
-		node /bin/bash -c 'npx --yes http-server --cert bin/cert.pem --key bin/key.pem --ssl'
+		node npx --yes http-server --cert bin/cert.pem --key bin/key.pem --ssl
 
-check: bin/check ## Check code.
+check: bin/check
 
-clean: ## Remove binaries.
+clean:
 	rm -rf bin/
 
-help: ## Show help.
-	@sed -n '/sed/d; /##/p' $(MAKEFILE_LIST) | awk 'BEGIN {FS = ":.* ## "}; {printf "make %-10s# %s\n", $$1, $$2}'
+help:
+	@printf 'make all 	# Run server.\n'
+	@printf 'make check 	# Check code.\n'
+	@printf 'make clean 	# Remove binaries.\n'
+	@printf 'make help 	# Show help.\n'
 
 .dockerignore:
 	printf '*\n' > .dockerignore
@@ -38,20 +41,55 @@ bin:
 	mkdir bin
 
 bin/cert.pem: bin
-	openssl req -newkey rsa:2048 -subj "/C=../ST=../L=.../O=.../OU=.../CN=.../emailAddress=..." -new -nodes -x509 -days 3650 -keyout bin/key.pem -out bin/cert.pem
+	$(container_engine) container run \
+		$(user_arg) \
+		--detach-keys 'ctrl-^,ctrl-^' \
+		--rm \
+		--volume $$(pwd):$(work_dir)/ \
+		--workdir $(work_dir)/ \
+		alpine/openssl req -newkey rsa:2048 -subj "/C=../ST=../L=.../O=.../OU=.../CN=.../emailAddress=..." -new -nodes -x509 -days 3650 -keyout bin/key.pem -out bin/cert.pem
 
-bin/check: .dockerignore .gitignore bin index.html
+bin/check: .dockerignore .gitignore bin bin/check-html bin/check-css bin/check-js
+	touch bin/check
+
+bin/check-css: .dockerignore .gitignore bin style.css
 	$(container_engine) container run \
 		$(debug_args) \
 		$(user_arg) \
-		--detach-keys 'ctrl-^,ctrl-^' \
 		--env HOME=$(work_dir)/bin \
 		--env NODE_PATH=$(work_dir)/bin \
 		--rm \
 		--volume $$(pwd):$(work_dir)/ \
 		--workdir $(work_dir)/ \
-		node /bin/bash -c 'npx --yes html-validate index.html'
-	touch bin/check
+		node npx --yes css-validator --profile css3svg style.css
+	touch bin/check-css
+
+bin/check-html: .dockerignore .gitignore bin index.html
+	$(container_engine) container run \
+		$(debug_args) \
+		$(user_arg) \
+		--env HOME=$(work_dir)/bin \
+		--env NODE_PATH=$(work_dir)/bin \
+		--rm \
+		--volume $$(pwd):$(work_dir)/ \
+		--workdir $(work_dir)/ \
+		node npx --yes html-validate index.html
+	touch bin/check-html
+
+bin/check-js: .dockerignore .gitignore bin bin/eslintrc.js script.js
+	$(container_engine) container run \
+		$(debug_args) \
+		$(user_arg) \
+		--env HOME=$(work_dir)/bin \
+		--env NODE_PATH=$(work_dir)/bin \
+		--rm \
+		--volume $$(pwd):$(work_dir)/ \
+		--workdir $(work_dir)/ \
+		node npx --yes eslint --fix --config bin/eslintrc.js script.js
+	touch bin/check-js
+
+bin/eslintrc.js: bin
+	echo 'module.exports = { "env": { "browser": true, "es2021": true }, "extends": "eslint:recommended", "overrides": [ ], "parserOptions": { "ecmaVersion": "latest" }, "rules": { "indent": [ "error", "tab" ], "linebreak-style": [ "error", "unix" ], "quotes": [ "error", "single" ], "semi": [ "error", "always" ], "no-undef": 0 } }' > bin/eslintrc.js
 
 index.html:
 	printf '\n' > index.html
